fix: toolbar btns out of alignment. (#3670)

--- a/themes/bootstrap3/less/components/search.less
+++ b/themes/bootstrap3/less/components/search.less
@@ -662,6 +662,11 @@ body.rtl {
   flex: none;
 }
 
+.toolbar-btn {
+  display: inline-block;
+  vertical-align: middle;
+}
+
 .clear-selection{
   font-weight: 700;
   padding: .25rem .4rem .15rem .4rem;
